# talon-pilot-studio

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  browser-connector-desktop.md  m1-acceptance.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_test.rs  browser.rs  config.rs  lib.rs  main.rs  updater_ui.rs  window_state.rs
