[package]
name = "talon-pilot-studio"
version = "0.1.0"
description = "Talon Pilot 桌面客户端"
edition = "2021"
rust-version = "1.77"

[lib]
name = "talon_pilot_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["sync"] }

# Windows tp-agent 包是 .zip(其余平台 tar.gz),仅 Windows 需 zip 解压。
# default-features = false 去掉不必要的压缩后端,只留 deflate(GitHub release zip 用 deflate)。
[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
