[package]
name = "talon-pilot-studio"
version = "0.1.0"
description = "Talon Pilot 桌面客户端"
edition = "2021"
rust-version = "1.77"

[lib]
name = "talon_pilot_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# 自动更新:updater 校验下载包的 minisign 签名(自有密钥,跟 Apple 证书无关),
# 整套检查/下载/安装在 Rust 侧跑(不耦合共享前端 web-next);dialog 弹原生确认框,
# process 在用户同意后 relaunch 重启自身完成替换。endpoint/pubkey 在 tauri.conf.json。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["sync"] }

# Windows tp-agent 包是 .zip(其余平台 tar.gz),仅 Windows 需 zip 解压。
# default-features = false 去掉不必要的压缩后端,只留 deflate(GitHub release zip 用 deflate)。
[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
